--- a/.github/workflows/git-ci.yml
+++ b/.github/workflows/git-ci.yml
@@ -24,13 +24,16 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: NPM Install
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          yarn
+          yarn build
+
+      - name: NPM Test
+        run: |
+          yarn test
+          yarn mutate
