feat: 🎸 Major refactor to rely on different fields
matching on different fields than before; could cause impacts to
existing consumers

BREAKING CHANGE: 🧨 Field match changes

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@stryker-mutator/jest-runner": "^6.0.2",
     "@stryker-mutator/typescript-checker": "^6.0.2",
     "@types/jest": "^27.5.0",
+    "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "aws-sdk-client-mock": "^0.6.2",
     "eslint": "^8.15.0",
     "jest": "^28.1.0",
+    "lodash": "^4.17.21",
     "semantic-release": "^19.0.2",
     "sinon": "^14.0.0",
     "ts-jest": "^28.0.2",
